monitoring/services/grafana-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana-nodeport
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
    - name: grafana
      nodePort: 30002
      port: 3000
      protocol: TCP
      targetPort: 3000
