monitoring/services/grafana.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
    - name: grafana
      port: 3000
      protocol: TCP
      targetPort: 3000
