monitoring/services/prometheus-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-nodeport
  namespace: monitoring
spec:
  ports:
    - name: prometheus
      nodePort: 30001
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
    type: pod
  type: NodePort
