monitoring/services/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
    - host: grafana.suven.com.np
      http:
        paths:
          - backend:
              service:
                port:
                  number: 3000
                name: grafana
            path: /
            pathType: Prefix
