monitoring/services/prometheus-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
spec:
  rules:
    - host: prometheus.suven.com.np
      http:
        paths:
          - backend:
              service:
                port:
                  number: 9090
                name: prometheus
            path: /
            pathType: Prefix
